# multithreaded-pi-calculations-rust

./: Cargo.toml  README.md  time_run.sh
old/: recurrent_single_thread.rs  simple.rs  simple_10.rs  simple_big_num.rs
src/: calc.rs  main.rs
